fix: github buttons align

--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -83,6 +83,7 @@ $animationDuration: 2s;
     }
     .github-buttons {
       margin-top: 20px;
+      text-align: center;
       a {
         margin-right: 12px;
         &:last-child {
